Work on organizer dashboard styling

--- a/frontend/src/components/common/Card/Card.module.scss
+++ b/frontend/src/components/common/Card/Card.module.scss
@@ -1,6 +1,6 @@
 .card {
   box-sizing: border-box;
-  border-radius: var(--tk-radius-sm);
+  border-radius: var(--tk-radius-lg);
   padding: var(--tk-spacing-lg);
   margin-bottom: var(--tk-spacing-lg);
 
