Add sidebar callout + clean up styles

--- a/frontend/src/components/common/EventCard/EventCard.module.scss
+++ b/frontend/src/components/common/EventCard/EventCard.module.scss
@@ -179,9 +179,7 @@
   flex-shrink: 0;
   
   @include mixins.respond-below(sm) {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
+    display: none;
   }
 }
 
