--- a/frontend/src/components/layouts/OrganizerLayout/OrganizerLayout.module.scss
+++ b/frontend/src/components/layouts/OrganizerLayout/OrganizerLayout.module.scss
@@ -4,16 +4,48 @@
   color: rgba(255, 255, 255, 0.9) !important;
   font-weight: 500;
   transition: color 0.2s ease;
-  
+
   &:hover {
     color: #ffffff !important;
   }
 
   @include mixins.respond-below(md) {
     color: var(--mantine-color-dark-0) !important;
-    
+
     &:hover {
       color: var(--mantine-color-dark-9) !important;
     }
   }
+
+  .viewHomepageButtonTextDesktop {
+    display: inline;
+
+    @include mixins.respond-below(md) {
+      display: none;
+    }
+  }
 }
+
+.createEventButton {
+  @include mixins.respond-below(md) {
+    margin-left: 5px;
+  }
+
+  .createEventButtonTextDesktop {
+    display: inline;
+
+    @include mixins.respond-below(md) {
+      display: none;
+    }
+  }
+
+  .createEventButtonTextMobile {
+    display: none;
+
+    @include mixins.respond-below(md) {
+      display: inline;
+    }
+  }
+}
+
+
