--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -12,6 +12,8 @@
   --tk-color-blue: rgba(23, 62, 161, 0.62);
   --tk-link-color: var(--tk-primary);
   --tk-pink: #d6499c;
+  --tk-primary-alt: #782282;
+  --tk-gradient: linear-gradient(135deg, var(--tk-primary), var(--tk-primary-alt));
 
   --tk-color-white: #ffffff;
   --tk-color-black: #000000;
