--- a/frontend/src/components/layouts/AppLayout/Topbar/Topbar.module.scss
+++ b/frontend/src/components/layouts/AppLayout/Topbar/Topbar.module.scss
@@ -30,6 +30,7 @@
     box-shadow: 3px 0px 8px rgb(0 0 0 / 8%);
     position: relative;
     z-index: 5;
+    min-height: 50px;
 
     &::before {
       content: '';
